--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hiragana quiz</title>
-    <!-- Include HTMX library -->
-    <script src="https://unpkg.com/htmx.org/dist/htmx.js"></script>
     <style>
         /* CSS to center the #result div */
         #result {
@@ -22,9 +21,10 @@
         }
     </style>
 </head>
+
 <body>
     <!-- Button to trigger AJAX request -->
-    <button id="btn" hx-get="/api/randomHiragana" hx-target="#result" hx-swap="innerHTML">Next</button>
+    <button id="btn" hx-trigger="click" hx-get="javascript:void(0);" hx-trigger="click" hx-target="#result" hx-swap="innerHTML" onclick="showRandomHiragana()">Next</button>
 
     <!-- Container to display fetched data -->
     <div id="result">...</div>
@@ -38,6 +38,58 @@
         }
 
         document.body.addEventListener("keydown", handleKeyPress);
+
+        function shuffleArray(array) {
+            for (let i = array.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [array[i], array[j]] = [array[j], array[i]];
+            }
+            return array;
+        }
+
+        const hiragana = [
+            "あ", "い", "う", "え", "お",
+            "か", "き", "く", "け", "こ",
+            "さ", "し", "す", "せ", "そ",
+            "た", "ち", "つ", "て", "と",
+            "な", "に", "ぬ", "ね", "の",
+            "は", "ひ", "ふ", "へ", "ほ",
+            "ま", "み", "む", "め", "も",
+            "や", "ゆ", "よ",
+            "ら", "り", "る", "れ", "ろ",
+            "わ", "を",
+            "ん",
+            "が", "ぎ", "ぐ", "げ", "ご",
+            "ざ", "じ", "ず", "ぜ", "ぞ",
+            "だ", "ぢ", "づ", "で", "ど",
+            "ば", "び", "ぶ", "べ", "ぼ",
+            "ぱ", "ぴ", "ぷ", "ぺ", "ぽ",
+            "きゃ", "きゅ", "きょ",
+            "しゃ", "しゅ", "しょ",
+            "ちゃ", "ちゅ", "ちょ",
+            "にゃ", "にゅ", "にょ",
+            "ひゃ", "ひゅ", "ひょ",
+            "みゃ", "みゅ", "みょ",
+            "りゃ", "りゅ", "りょ",
+            "ぎゃ", "ぎゅ", "ぎょ",
+            "じゃ", "じゅ", "じょ",
+            "びゃ", "びゅ", "びょ",
+            "ぴゃ", "ぴゅ", "ぴょ"
+        ];
+
+        let shuffledHiragana = shuffleArray([...hiragana]);
+        let currentIndex = 0;
+
+        function getNextHiragana() {
+            if (currentIndex >= shuffledHiragana.length) {
+                shuffledHiragana = shuffleArray([...hiragana]);
+                currentIndex = 0;
+            }
+            const nextHiragana = shuffledHiragana[currentIndex];
+            currentIndex++;
+            return nextHiragana;
+        }
     </script>
 </body>
+
 </html>
