--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
     <button id='set-btn' onclick='switchSet()'>Switch</button>
     <button id='show-yomikata-btn' style='display: none' onclick='showYomikata()'></button>
+    <button id='show-english-btn' style='display: none' onclick='showEnglish()'></button>
 
     <span id='set'>hiragana</span>
 
@@ -49,6 +50,10 @@
                 event.preventDefault();
                 if (currentMojiSet === kanjiList && !yomikataRevealed && nextMoji !== '') {
                     document.getElementById('show-yomikata-btn').click();
+                }
+                else if(currentMojiSet === kanjiListHard && !yomikataRevealed && nextMoji !== ''){
+                    document.getElementById('show-yomikata-btn').click();
+                    document.getElementById('show-english-btn').click();
                 }
                 else {
                     document.getElementById('moji-btn').click();
@@ -249,16 +254,119 @@
             { id: 99, kanji: '西', hiragana: 'にし' }
         ];
 
+        const kanjiListHard = [
+            { id: 1, kanji: '顕著', hiragana: 'けんちょ', english: 'remarkable' },
+            { id: 2, kanji: '促進', hiragana: 'そくしん', english: 'promotion' },
+            { id: 3, kanji: '懸念', hiragana: 'けねん', english: 'concern' },
+            { id: 4, kanji: '概念', hiragana: 'がいねん', english: 'concept' },
+            { id: 5, kanji: '覆す', hiragana: 'くつがえ(す)', english: 'overturn' },
+            { id: 6, kanji: '雰囲気', hiragana: 'ふんいき', english: 'atmosphere' },
+            { id: 7, kanji: '堅実', hiragana: 'けんじつ', english: 'steady' },
+            { id: 8, kanji: '孤独', hiragana: 'こどく', english: 'loneliness' },
+            { id: 9, kanji: '賛成', hiragana: 'さんせい', english: 'agreement' },
+            { id: 10, kanji: '強調', hiragana: 'きょうちょう', english: 'emphasis' },
+            { id: 11, kanji: '解釈', hiragana: 'かいしゃく', english: 'interpretation' },
+            { id: 12, kanji: '緩和', hiragana: 'かんわ', english: 'alleviation' },
+            { id: 13, kanji: '潜在', hiragana: 'せんざい', english: 'potential' },
+            { id: 14, kanji: '継続', hiragana: 'けいぞく', english: 'continuation' },
+            { id: 15, kanji: '巧妙', hiragana: 'こうみょう', english: 'clever' },
+            { id: 16, kanji: '撤退', hiragana: 'てったい', english: 'withdrawal' },
+            { id: 17, kanji: '信仰', hiragana: 'しんこう', english: 'faith' },
+            { id: 18, kanji: '結晶', hiragana: 'けっしょう', english: 'crystal' },
+            { id: 19, kanji: '享受', hiragana: 'きょうじゅ', english: 'enjoyment' },
+            { id: 20, kanji: '探求', hiragana: 'たんきゅう', english: 'inquiry' },
+            { id: 21, kanji: '洞察', hiragana: 'どうさつ', english: 'insight' },
+            { id: 22, kanji: '範囲', hiragana: 'はんい', english: 'scope' },
+            { id: 23, kanji: '促す', hiragana: 'うなが(す)', english: 'urge' },
+            { id: 24, kanji: '隔離', hiragana: 'かくり', english: 'isolation' },
+            { id: 25, kanji: '膨張', hiragana: 'ぼうちょう', english: 'expansion' },
+            { id: 26, kanji: '抑制', hiragana: 'よくせい', english: 'restraint' },
+            { id: 27, kanji: '探査', hiragana: 'たんさ', english: 'exploration' },
+            { id: 28, kanji: '憂慮', hiragana: 'ゆうりょ', english: 'anxiety' },
+            { id: 29, kanji: '犠牲', hiragana: 'ぎせい', english: 'sacrifice' },
+            { id: 30, kanji: '魅了', hiragana: 'みりょう', english: 'fascination' },
+            { id: 31, kanji: '譲歩', hiragana: 'じょうほ', english: 'concession' },
+            { id: 32, kanji: '顧問', hiragana: 'こもん', english: 'advisor' },
+            { id: 33, kanji: '凝縮', hiragana: 'ぎょうしゅく', english: 'condensation' },
+            { id: 34, kanji: '徹底', hiragana: 'てってい', english: 'thoroughness' },
+            { id: 35, kanji: '沈黙', hiragana: 'ちんもく', english: 'silence' },
+            { id: 36, kanji: '叱責', hiragana: 'しっせき', english: 'reprimand' },
+            { id: 37, kanji: '排除', hiragana: 'はいじょ', english: 'exclusion' },
+            { id: 38, kanji: '推奨', hiragana: 'すいしょう', english: 'recommendation' },
+            { id: 39, kanji: '懐疑', hiragana: 'かいぎ', english: 'skepticism' },
+            { id: 40, kanji: '享受', hiragana: 'きょうじゅ', english: 'enjoyment' },
+            { id: 41, kanji: '即座', hiragana: 'そくざ', english: 'immediate' },
+            { id: 42, kanji: '堕落', hiragana: 'だらく', english: 'corruption' },
+            { id: 43, kanji: '剥奪', hiragana: 'はくだつ', english: 'deprivation' },
+            { id: 44, kanji: '淘汰', hiragana: 'とうた', english: 'natural selection' },
+            { id: 45, kanji: '施行', hiragana: 'しこう', english: 'enforcement' },
+            { id: 46, kanji: '排出', hiragana: 'はいしゅつ', english: 'emission' },
+            { id: 47, kanji: '救済', hiragana: 'きゅうさい', english: 'relief' },
+            { id: 48, kanji: '隠蔽', hiragana: 'いんぺい', english: 'concealment' },
+            { id: 49, kanji: '模索', hiragana: 'もさく', english: 'exploration' },
+            { id: 50, kanji: '誓約', hiragana: 'せいやく', english: 'pledge' },
+            { id: 51, kanji: '請求', hiragana: 'せいきゅう', english: 'claim' },
+            { id: 52, kanji: '奨励', hiragana: 'しょうれい', english: 'encouragement' },
+            { id: 53, kanji: '譲渡', hiragana: 'じょうと', english: 'transfer' },
+            { id: 54, kanji: '懲戒', hiragana: 'ちょうかい', english: 'discipline' },
+            { id: 55, kanji: '改訂', hiragana: 'かいてい', english: 'revision' },
+            { id: 56, kanji: '崩壊', hiragana: 'ほうかい', english: 'collapse' },
+            { id: 57, kanji: '隠匿', hiragana: 'いんとく', english: 'concealment' },
+            { id: 58, kanji: '領域', hiragana: 'りょういき', english: 'territory' },
+            { id: 59, kanji: '矛盾', hiragana: 'むじゅん', english: 'contradiction' },
+            { id: 60, kanji: '融資', hiragana: 'ゆうし', english: 'financing' },
+            { id: 61, kanji: '繁栄', hiragana: 'はんえい', english: 'prosperity' },
+            { id: 62, kanji: '返済', hiragana: 'へんさい', english: 'repayment' },
+            { id: 63, kanji: '誇張', hiragana: 'こちょう', english: 'exaggeration' },
+            { id: 64, kanji: '堅固', hiragana: 'けんご', english: 'solid' },
+            { id: 65, kanji: '逸脱', hiragana: 'いつだつ', english: 'deviation' },
+            { id: 66, kanji: '堕落', hiragana: 'だらく', english: 'degeneration' },
+            { id: 67, kanji: '膨大', hiragana: 'ぼうだい', english: 'enormous' },
+            { id: 68, kanji: '卓越', hiragana: 'たくえつ', english: 'excellence' },
+            { id: 69, kanji: '励む', hiragana: 'はげ(む)', english: 'strive' },
+            { id: 70, kanji: '遮る', hiragana: 'さえぎ(る)', english: 'interrupt' },
+            { id: 71, kanji: '顧みる', hiragana: 'かえり(みる)', english: 'reflect' },
+            { id: 72, kanji: '推す', hiragana: 'お(す)', english: 'recommend' },
+            { id: 73, kanji: '譲る', hiragana: 'ゆず(る)', english: 'yield' },
+            { id: 74, kanji: '嘆く', hiragana: 'なげ(く)', english: 'lament' },
+            { id: 75, kanji: '催す', hiragana: 'もよお(す)', english: 'hold (a meeting)' },
+            { id: 76, kanji: '謀る', hiragana: 'はか(る)', english: 'plot' },
+            { id: 77, kanji: '唆す', hiragana: 'そそのか(す)', english: 'incite' },
+            { id: 78, kanji: '抑える', hiragana: 'おさ(える)', english: 'suppress' },
+            { id: 79, kanji: '誓う', hiragana: 'ちか(う)', english: 'vow' },
+            { id: 80, kanji: '励ます', hiragana: 'はげ(ます)', english: 'encourage' },
+            { id: 81, kanji: '奏でる', hiragana: 'かな(でる)', english: 'play (an instrument)' },
+            { id: 82, kanji: '促す', hiragana: 'うなが(す)', english: 'urge' },
+            { id: 83, kanji: '誓約', hiragana: 'せいやく', english: 'pledge' },
+            { id: 84, kanji: '復興', hiragana: 'ふっこう', english: 'reconstruction' },
+            { id: 85, kanji: '派遣', hiragana: 'はけん', english: 'dispatch' },
+            { id: 86, kanji: '堅実', hiragana: 'けんじつ', english: 'solid' },
+            { id: 87, kanji: '矛盾', hiragana: 'むじゅん', english: 'contradiction' },
+            { id: 88, kanji: '摩擦', hiragana: 'まさつ', english: 'friction' },
+            { id: 89, kanji: '考慮', hiragana: 'こうりょ', english: 'consideration' },
+            { id: 90, kanji: '強奪', hiragana: 'ごうだつ', english: 'robbery' },
+            { id: 91, kanji: '粘る', hiragana: 'ねば(る)', english: 'persist' },
+            { id: 92, kanji: '揺らぐ', hiragana: 'ゆ(らぐ)', english: 'waver' },
+            { id: 93, kanji: '諮る', hiragana: 'はか(る)', english: 'consult' },
+            { id: 94, kanji: '滞る', hiragana: 'とどこお(る)', english: 'be delayed' },
+            { id: 95, kanji: '施す', hiragana: 'ほどこ(す)', english: 'give (aid)' },
+            { id: 96, kanji: '償う', hiragana: 'つぐな(う)', english: 'compensate' },
+            { id: 97, kanji: '搾取', hiragana: 'さくしゅ', english: 'exploitation' },
+            { id: 98, kanji: '嘲笑', hiragana: 'ちょうしょう', english: 'ridicule' },
+            { id: 99, kanji: '擁護', hiragana: 'ようご', english: 'protection' }
+        ];
+
         let currentMojiSet = hiraganaList;
 
         let shuffledList = shuffleArray([...currentMojiSet]);
         let currentMojiIndex = 0;
 
-        let setList = ['hiragana', 'katakana', 'kanji', 'katakana (words)'];
+        let setList = ['hiragana', 'katakana', 'kanji', 'katakana (words)', 'kanji (hard)'];
         let currentSetIndex = 0;
 
         let nextMoji = '';
         let nextYomikata = '';
+        let nextEnglish = '';
 
         let yomikataRevealed = false;
 
@@ -274,6 +382,7 @@
             else {
                 nextMoji = shuffledList[currentMojiIndex].kanji;
                 nextYomikata = shuffledList[currentMojiIndex].hiragana;
+                nextEnglish = shuffledList[currentMojiIndex].english;
             }
 
             currentMojiIndex++;
@@ -285,6 +394,10 @@
         function showYomikata() {
             document.getElementById('yomikata').innerHTML = nextYomikata;
             yomikataRevealed = true;
+        }
+
+        function showEnglish() {
+            document.getElementById('yomikata').innerHTML += '<br>' + nextEnglish;
         }
 
         function switchSet() {
@@ -299,6 +412,9 @@
             }
             else if (setList[currentSetIndex] === 'katakana (words)') {
                 currentMojiSet = katakanaWords;
+            }
+            else if (setList[currentSetIndex] === 'kanji (hard)') {
+                currentMojiSet = kanjiListHard;
             }
             else {
                 currentMojiSet = kanjiList;
